<resources>
    <string name="app_name">Alt Launcher</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Clear</string>
    <string name="previous">Previous</string>
    <string name="channel_name">notifications</string>
    <string name="channel_description">notifications for the foreground service</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="launch">Launch</string>
    <string name="reload">Reload</string>
    <string name="bg_apps_label">Run Apps in background prior to split screen. Click on an App to remove it from the list.</string>
    <string name="new_app">Add new Background App</string>
    <string name="new_service">Add new Service to start</string>
    <string name="top_app">Top App for Split Screen</string>
    <string name="btm_app">Bottom App for Split Screen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="feedback_header">Feedback</string>

    <!-- Messages Preferences -->
    <string name="background_app_delay_title">Seconds to delay after starting each background app. Must be greater than 0.</string>
    <string name="delay_after_fast_boot_title">Seconds to delay after fast boot, prior to launching apps. Must be greater than 0.</string>
    <string name="delay_after_boot_title">Seconds to delay after normal boot, prior to launching apps. Must be 0 or greater.</string>
    <string name="reply_title">Default reply action</string>
    <string name="delay_after_service_title">Seconds to delay after starting each service.</string>

    <!-- about page -->
    <string name="about_data">Copyright 2020 tabletradio. All Rights Reserved. https://github.com/tabletradio/\n\n
        Licensed under the Apache 2.0 License. See https://github.com/tabletradio/altlauncher/blob/master/LICENSE\n\n
        Based paritally on work in the Split-Screen Launcher: https://github.com/madebyfrancisco/SplitScreenLauncher\n\n
        Based partially on the default Fragment App in Android Studio\n\n
    </string>
    <string name="about_title">About</string>
    <string name="General">General</string>
    <string name="view_logs">View Logs</string>
</resources>
